packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-002-hosts-unknown.ttrp
// expect: TTRP-WLD-002
// models: hosts-unknown-package
uses world "acme.worlds.dev"
container c target erp_pg { }
